fix spacing, update Projects page

--- a/src/About.css
+++ b/src/About.css
@@ -10,7 +10,7 @@
 .info {
   display: inline;
   width: 60%;
-  min-height: 31vh;
+  min-height: 41vh;
   opacity: 0;
   animation: fadeIn 0.5s ease-in forwards;
 }
