--- a/src/Home.css
+++ b/src/Home.css
@@ -14,7 +14,7 @@ a {
 .navbar {
   display: flex;
   width: 100%;
-  min-height: 31vh;
+  min-height: 41vh;
   gap: 30px;
   flex-direction: row;
   font-size: 1.5em;
