--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -41,6 +40,7 @@ h1 {
   font-size: 8em;
   line-height: 1.1;
   font-weight: normal;
+  margin: 0.2em;
 }
 
 p {
